Свёрстана и адаптирована секция с формой

--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
 
   </header>
 
+  <main class="main">
+
+    <section class="price section">
+      <div class="container">
+        <div class="price__content">
+          <h2 class="price__title section-title">Получите прайс прямо&nbsp;сейчас <br> на электронную почту!</h2>
+          <div class="price-form">
+            <div class="price-form__row">
+              <input type="email" class="price-form__email input" placeholder="Введите ваш e-mail">
+              <input type="tel" class="price-form__tel input" placeholder="Введите ваш телефон">
+            </div>
+            <div class="price-form__row">
+              <div class="price-form__waiting">
+                <div class="price-form__text">
+                  Прайс придет к Вам на почту <br>
+                  в течение 5 минут!
+                </div>
+                <img src="img/form-icons/clock.svg" alt="clock" class="price-form__img">
+            </div>
+                <button class="btn_blue price__button">Получить прайс</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+
+  </main>
 
 
 </body>
