Сверстал и адаптировал секцию all-parts

--- a/index.html
+++ b/index.html
@@ -96,7 +96,91 @@
       </div>
     </section>
 
-    
+    <section class="all-parts section">
+      <div class="container">
+        <div class="all-parts__content">
+          <h2 class="all-parts__title section-title">Вам не придется ждать!</h2>
+          <div class="all-parts__subtitle section-subtitle">Любые запчасти для всех моделей Белаз
+            всегда в наличии!</div>
+          <div class="all-parts-list">
+            <div class="all-parts-list__item">
+              <div class="all-parts-list__img-wrapper">
+                <img src="img/all-parts/01.svg" alt="Любые типы деталей" class="all-parts-list__img">
+              </div>
+                <div class="all-parts-list__text">Любые типы деталей
+                  от шайбы до двигателя!</div>
+            </div>
+            <div class="all-parts-list__item">
+              <div class="all-parts-list__img-wrapper">
+                <img src="img/all-parts/02.svg" alt="Все модификации Белаз" class="all-parts-list__img">
+              </div>
+                <div class="all-parts-list__text">Все модификации Белаз
+                  от 45т до 450 т</div>
+            </div>
+            <div class="all-parts-list__item">
+              <div class="all-parts-list__img-wrapper">
+                <img src="img/all-parts/03.svg" alt="Отгружаем в день заказа" class="all-parts-list__img">
+              </div>
+                <div class="all-parts-list__text">Отгружаем в день заказа!</div>
+            </div>
+            <div class="all-parts-list__item">
+              <div class="all-parts-list__img-wrapper">
+                <img src="img/all-parts/04.svg" alt="Доставим в любое место" class="all-parts-list__img">
+              </div>
+                <div class="all-parts-list__text">Доставим в любое место!</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class=" section-title"></h2>
+        </div>
+      </div>
+    </section>
+
+    <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class=" section-title"></h2>
+        </div>
+      </div>
+    </section>
+
+    <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class=" section-title"></h2>
+        </div>
+      </div>
+    </section>
+
+    <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class=" section-title"></h2>
+        </div>
+      </div>
+    </section>
+
+    <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class=" section-title"></h2>
+        </div>
+      </div>
+    </section>
+
+    <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class=" section-title"></h2>
+        </div>
+      </div>
+    </section> -->
 
   </main>
 
