--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="navbar__content">
 
-          <img src="img/navbar/logo.png" alt="logo" class="logo navbar__logo">
+          <a href="index.html"><img src="img/navbar/logo.png" alt="logo" class="logo navbar__logo"></a>
 
           <div class="navbar__work-time"><span class="navbar__work-time_bold">c 9:00 до 21:00</span> <br>
             без выходных</div>
@@ -76,10 +76,10 @@
       <div class="container">
         <div class="price__content">
           <h2 class="price__title section-title">Получите прайс прямо&nbsp;сейчас <br> на электронную почту!</h2>
-          <form method="GET" class="price-form">
+          <form method="#" class="price-form">
             <div class="price-form__row">
               <input type="email" class="price-form__email input" placeholder="Введите ваш e-mail">
-              <input type="tel" class="price-form__tel input phone-input" placeholder="Введите ваш телефон">
+              <input type="tel" id="phone" class="price-form__tel input phone-input" placeholder="Введите ваш телефон">
             </div>
             <div class="price-form__row">
               <div class="price-form__waiting">
@@ -140,7 +140,7 @@
           <h2 class="part-search__title section-title">Ищете конкретную деталь?</h2>
           <div class="part-search__subtitle section-subtitle">Если у Вас есть артикул - введите его в поле ниже и получите цену
             ПРЯМО СЕЙЧАС!</div>
-          <form action="GET" class="part-search-form">
+          <form action="#" class="part-search-form">
             <input type="text" placeholder="Введите артикул детали" class="part-search-form__vendor-code part-search-form__input input">
             <input type="tel" placeholder="Введите ваш телефон" class="part-search-form__tel phone-input part-search-form__input input">
             <button class="part-search-form__btn btn_yellow btn">Узнать цену</button>
@@ -152,6 +152,35 @@
               <a href="tel:+78182474725" class="part-search__phone tel">+7 (818) 247-47-25</a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="safety section">
+      <div class="container">
+        <div class="safety__content">
+          <h2 class="safety__title section-title">Мы гарантируем сохранность деталей
+            во время перевозки!</h2>
+            <div class="safety-list">
+              <div class="safety-list__item">
+                <img src="img/safety/01.jpg" alt="Гарантия на целостность поставки прописана в договоре" class="safety-list__img">
+                <div class="safety-list__text">Гарантия на целостность поставки
+                  прописана в договоре</div>
+                <a href="#" class="safety-list__more">ПОДРОБНЕЕ</a>
+              </div>
+              <div class="safety-list__item">
+                <img src="img/safety/02.jpg" alt="Каждая запчасть доставляется с завода в жесткой упаковке" class="safety-list__img">
+                <div class="safety-list__text">Каждая запчасть доставляется с завода
+                  в жесткой упаковке</div>
+                <a href="#" class="safety-list__more">ПОДРОБНЕЕ</a>
+              </div>
+              <div class="safety-list__item">
+                <img src="img/safety/03.jpg" alt="Дополнительный контроль качества нашими специалистами" class="safety-list__img">
+                <div class="safety-list__text">Дополнительный контроль качества
+                  нашими специалистами</div>
+                <a href="#" class="safety-list__more">ПОДРОБНЕЕ</a>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -188,16 +217,8 @@
       </div>
     </section> -->
 
-    <!-- <section class=" section">
-      <div class="container">
-        <div class="__content">
-          <h2 class="__title section-title"></h2>
-        </div>
-      </div>
-    </section> -->
-
   </main>
-
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
