--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
       </div>
     </section> -->
 
+    <!-- Прокрутка -->
+    <a href="#" class="arrowUp"><img src="img/scrollUp/arrow-up.svg" alt="arrow"></a>
+
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
