Почти доверстал секцию с вопросами

--- a/index.html
+++ b/index.html
@@ -185,13 +185,74 @@
       </div>
     </section>
 
-    <!-- <section class=" section">
+        <section class="bonuses section">
+          <div class="container">
+            <div class="bonuses__content">
+              <h2 class="bonuses__title section-title">У нас разработаны бонусные системы
+                и скидки для наших клиентов</h2>
+              <div class="bonuses-list">
+                <div class="bonuses-list__item">
+                  <img src="img/bonuses/01.png" alt="Дополнительная скидка 10% на вторую запчасть и любые последующие"
+                    class="bonuses-list__img">
+                  <div class="bonuses-list__text">Дополнительная скидка 10%
+                    на вторую запчасть
+                    и любые последующие</div>
+                </div>
+                <div class="bonuses-list__item">
+                  <img src="img/bonuses/02.png" alt="Скидка 20% при заключении договора на годовое сервисное обслуживание"
+                    class="bonuses-list__img">
+                  <div class="bonuses-list__text">Скидка 20% при заключении
+                    договора на годовое
+                    сервисное обслуживание</div>
+                </div>
+                <div class="bonuses-list__item">
+                  <img src="img/bonuses/03.png" alt="Бесплатная доставка по всей России для всех клиентов"
+                    class="bonuses-list__img">
+                  <div class="bonuses-list__text">Бесплатная доставка
+                    по всей России
+                    для всех клиентов</div>
+                </div>
+                <div class="bonuses-list__item">
+                  <img src="img/bonuses/04.png" alt="Бесплатная круглосуточная техническая поддержка"
+                    class="bonuses-list__img">
+                  <div class="bonuses-list__text">Бесплатная круглосуточная
+                    техническая поддержка</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+    <section class="questions section">
       <div class="container">
-        <div class="__content">
-          <h2 class="__title section-title"></h2>
+        <div class="questions__content">
+          <h2 class="questions__title section-title">У Вас остались вопросы?</h2>
+          <div class="questions__subtitle section-subtitle">На Ваши вопросы отвечает Эдуард</div>
+          <div class="questions-wrapper">
+            <ol class="questions-list">
+              <li class="questions-list__item"><span href="#" class="questions-list__link">Как заказать деталь
+                  правильно?</span></li>
+              <li class="questions-list__item"><span href="#" class="questions-list__link">Что делать, если запчасть не
+                  понадобилась?</span></li>
+              <li class="questions-list__item"><span href="#" class="questions-list__link">Можете ли Вы установить
+                  деталь?</span></li>
+              <li class="questions-list__item"><span href="#" class="questions-list__link">В чем преимущества оригинальных
+                  деталей?</span></li>
+              <li class="questions-list__item"><span href="#" class="questions-list__link">В чем преимущества оригинальных
+                  деталей?</span></li>
+              <a href="#" class="questions-list__more questions-list-more">
+                <img src="img/questions/reload.svg" alt="reload"><span class="questions-list-more__text">Еще
+                  вопросы</span>
+              </a>
+            </ol>
+            <div class="questions-director">
+              <div class="questions-director__name">Эдуард Викторович, <br>
+                Директор ООО "Eddie`s-Car"</div>
+            </div>
+          </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class=" section">
       <div class="container">
@@ -218,9 +279,11 @@
     </section> -->
 
     <!-- Прокрутка -->
-    <a href="#" class="arrowUp"><img src="img/scrollUp/arrow-up.svg" alt="arrow"></a>
-
+    
   </main>
+
+
+  <a href="#" class="arrowUp"><img src="img/scrollUp/arrow-up.svg" alt="arrow"></a>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
