--- a/index.html
+++ b/index.html
@@ -351,6 +351,43 @@
       </div>
     </section>
 
+    <section class="service section">
+      <div class="container">
+        <div class="service__content">
+          <h2 class="service__title section-title">У нас в штате есть мобильные бригады,
+            готовые выехать на&nbsp;сервисное обслуживание,
+            ремонт и проведение диагностики!</h2>
+          <div class="service-list">
+            <div class="service-list__item">
+              <img src="img/service/01.png" alt="Организуем выезд специалистов в течение двух дней" class="service-list__img">
+              <div class="service-list__text">Организуем выезд специалистов
+                в течение двух дней</div>
+            </div>
+            <div class="service-list__item">
+              <img src="img/service/02.png" alt="Бригады укомплектованы всем необходимым оборудованием для производства работ любой сложности" class="service-list__img">
+              <div class="service-list__text">Бригады укомплектованы
+                всем необходимым оборудованием
+                для производства работ
+                любой сложности</div>
+            </div>
+            <div class="service-list__item">
+              <img src="img/service/03.png" alt="Все специалисты проходят обучение и ежегодную аттестацию" class="service-list__img">
+              <div class="service-list__text">Все специалисты проходят обучение
+                и ежегодную аттестацию</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class=" section">
+      <div class="container">
+        <div class="__content">
+          <h2 class="__title section-title"></h2>
+        </div>
+      </div>
+    </section> -->
+
     <!-- <section class=" section">
       <div class="container">
         <div class="__content">
