--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Оригинальные запчасти для БелАЗ</title>
+  <title>Оригинальные запчасти для БелАЗ в Eddie's-Car</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -380,13 +380,22 @@
       </div>
     </section>
 
-    <!-- <section class=" section">
+    <section class="consultation section">
       <div class="container">
-        <div class="__content">
-          <h2 class="__title section-title"></h2>
+        <div class="consultation__content">
+          <h2 class="consultation__title section-title">Если Вам необходима бесплатная консультация по вопросу
+            обслуживания</h2>
+          <div class="consultation-call consultation__call">
+            <div class="consultation-call__text">Звоните нам по телефону:</div>
+            <a href="tel:+78182474725" class="consultation-call__phone tel">+7 (818) 247-47-25</a>
+          </div>
+          <form action="#" class="consultation-form">
+            <input type="tel" class="consultation-form__tel phone-input input" placeholder="Введите ваш телефон">
+            <button class="consultation-form__btn btn_yellow btn">Перезвонить сейчас</button>
+          </form>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class=" section">
       <div class="container">
