--- a/index.html
+++ b/index.html
@@ -397,13 +397,15 @@
       </div>
     </section>
 
-    <!-- <section class=" section">
+    <section class="office section">
       <div class="container">
-        <div class="__content">
-          <h2 class="__title section-title"></h2>
+        <div class="office__content">
+          <h2 class="office__title section-title">Приезжайте в наш офис!</h2>
+          <div class="office__address">г. Архангельск, Москва-Сити, оф.&nbsp;3725</div>
+          <a href="tel:+78182474725" class="office__phone tel">+7 (818) 247-47-25</a>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Прокрутка -->
 
