--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="container">
         <div class="price__content">
           <h2 class="price__title section-title">Получите прайс прямо&nbsp;сейчас <br> на электронную почту!</h2>
-          <form method="#" class="price-form">
+          <form method="GET" class="price-form">
             <div class="price-form__row">
               <input type="email" class="price-form__email input" placeholder="Введите ваш e-mail">
               <input type="tel" id="phone" class="price-form__tel input phone-input" placeholder="Введите ваш телефон">
@@ -95,6 +95,7 @@
                 <img src="img/form-icons/clock.svg" alt="clock" class="price-form__img">
               </div>
               <button class="btn_blue btn price__button">Получить прайс</button>
+            </div>
           </form>
         </div>
       </div>
@@ -359,19 +360,23 @@
             ремонт и проведение диагностики!</h2>
           <div class="service-list">
             <div class="service-list__item">
-              <img src="img/service/01.png" alt="Организуем выезд специалистов в течение двух дней" class="service-list__img">
+              <img src="img/service/01.png" alt="Организуем выезд специалистов в течение двух дней"
+                class="service-list__img">
               <div class="service-list__text">Организуем выезд специалистов
                 в течение двух дней</div>
             </div>
             <div class="service-list__item">
-              <img src="img/service/02.png" alt="Бригады укомплектованы всем необходимым оборудованием для производства работ любой сложности" class="service-list__img">
+              <img src="img/service/02.png"
+                alt="Бригады укомплектованы всем необходимым оборудованием для производства работ любой сложности"
+                class="service-list__img">
               <div class="service-list__text">Бригады укомплектованы
                 всем необходимым оборудованием
                 для производства работ
                 любой сложности</div>
             </div>
             <div class="service-list__item">
-              <img src="img/service/03.png" alt="Все специалисты проходят обучение и ежегодную аттестацию" class="service-list__img">
+              <img src="img/service/03.png" alt="Все специалисты проходят обучение и ежегодную аттестацию"
+                class="service-list__img">
               <div class="service-list__text">Все специалисты проходят обучение
                 и ежегодную аттестацию</div>
             </div>
@@ -417,8 +422,9 @@
     <div class="container">
       <div class="footer__content">
         <img src="img/navbar/logo.png" alt="logo" class="footer__logo">
-        <div class="footer__develop">© 2016, CДЕЛАНО С <img src="img/footer/love.svg" alt="love" class="footer__love-img"> КОМАНДОЙ <img
-            src="img/footer/logo.png" alt="ДА!МАРКЕТИНГ" class="footer__design-developer"></div>
+        <div class="footer__develop">© 2016, CДЕЛАНО С <img src="img/footer/love.svg" alt="love"
+            class="footer__love-img"> КОМАНДОЙ <img src="img/footer/logo.png" alt="ДА!МАРКЕТИНГ"
+            class="footer__design-developer"></div>
         <div class="footer-phone">
           <div class="footer-phone__text">Есть вопросы? Звоните!</div>
           <a href="tel:+78182474725" class="footer-phone__tel tel">+7 (818) 247-47-25</a>
