--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <body>
 
-    <div class="loader-wrap" id="load-wrap">
-      <div class="loader" id="loader">
-        <div class="ball"></div>
-        <div class="ball"></div>
-        <div class="ball"></div>
-      </div>
-      <svg>
-        <defs>
-          <filter id="gooey">
-            <feGaussianBlur in="SourceGraphic" stdDeviation="12" result="blur"></feGaussianBlur>
-            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo">
-            </feColorMatrix>
-            <feBlend in="SourceGraphic" in2="goo"></feBlend>
-          </filter>
-        </defs>
-      </svg>
+  <!-- <div class="loader-wrap" id="load-wrap">
+    <div class="loader" id="loader">
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
     </div>
+    <svg>
+      <defs>
+        <filter id="gooey">
+          <feGaussianBlur in="SourceGraphic" stdDeviation="12" result="blur"></feGaussianBlur>
+          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo">
+          </feColorMatrix>
+          <feBlend in="SourceGraphic" in2="goo"></feBlend>
+        </filter>
+      </defs>
+    </svg>
+  </div> -->
 
   <header id="scroll" class="header">
 
@@ -429,7 +429,7 @@
       </div>
     </section>
 
-  
+
     <iframe class="map"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1714.863946768129!2d40.51329681588195!3d64.54449498945905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x441836858b23cd43%3A0xf35372b070d2d7d!2z0L_RgNC-0YHQvy4g0KLRgNC-0LjRhtC60LjQuSwgNjUsINCQ0YDRhdCw0L3Qs9C10LvRjNGB0LosINCQ0YDRhdCw0L3Qs9C10LvRjNGB0LrQsNGPINC-0LHQuy4sIDE2MzAwNA!5e0!3m2!1sru!2sru!4v1582625792181!5m2!1sru!2sru"></iframe>
 
@@ -439,9 +439,15 @@
     <div class="container">
       <div class="footer__content">
         <img src="img/navbar/logo.png" alt="logo" class="footer__logo">
-        <div class="footer__develop">© 2016, CДЕЛАНО С <img src="img/footer/love.svg" alt="love"
-            class="footer__love-img"> КОМАНДОЙ <img src="img/footer/logo.png" alt="ДА!МАРКЕТИНГ"
-            class="footer__design-developer"></div>
+        <div class="footer__develop">
+          <div class="footer__design-author">
+            © 2016, CДЕЛАНО С <img src="img/footer/love.svg" alt="love" class="footer__love-img"> КОМАНДОЙ <img
+              src="img/footer/logo.png" alt="ДА!МАРКЕТИНГ" class="footer__design-developer">
+          </div>
+          <div class="footer__web-develop-author">
+            Разработал <a href="https://vk.com/kudashov_blog" class="developer-link" target="_blank">Данила Кудашов</a>
+          </div>
+        </div>
         <div class="footer-phone">
           <div class="footer-phone__text">Есть вопросы? Звоните!</div>
           <a href="tel:+78182474725" class="footer-phone__tel tel">+7 (818) 247-47-25</a>
