--- a/index.html
+++ b/index.html
@@ -5,29 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Оригинальные запчасти для БелАЗ в Eddie's-Car</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-  <!-- <div class="loader-wrap" id="load-wrap">
-    <div class="loader" id="loader">
-      <div class="ball"></div>
-      <div class="ball"></div>
-      <div class="ball"></div>
-    </div>
-    <svg>
-      <defs>
-        <filter id="gooey">
-          <feGaussianBlur in="SourceGraphic" stdDeviation="12" result="blur"></feGaussianBlur>
-          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo">
-          </feColorMatrix>
-          <feBlend in="SourceGraphic" in2="goo"></feBlend>
-        </filter>
-      </defs>
-    </svg>
-  </div> -->
 
   <header id="scroll" class="header">
 
@@ -47,7 +29,7 @@
               <a href="tel:+78182474725" class="phones__number tel">+7(818) 247-47-25</a>
             </div>
 
-            <button class="call-group__button btn_blue btn">Заказать звонок</button>
+            <button class="call-group__button btn_blue btn" onclick="slowScroll('#btnScroll')">Заказать звонок</button>
 
           </div>
 
@@ -93,7 +75,7 @@
 
   </header>
 
-  <main class="main">
+  <main class="main" id="btnScroll">
 
     <section class="price section">
       <div class="container">
@@ -430,8 +412,7 @@
     </section>
 
 
-    <iframe class="map"
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1714.863946768129!2d40.51329681588195!3d64.54449498945905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x441836858b23cd43%3A0xf35372b070d2d7d!2z0L_RgNC-0YHQvy4g0KLRgNC-0LjRhtC60LjQuSwgNjUsINCQ0YDRhdCw0L3Qs9C10LvRjNGB0LosINCQ0YDRhdCw0L3Qs9C10LvRjNGB0LrQsNGPINC-0LHQuy4sIDE2MzAwNA!5e0!3m2!1sru!2sru!4v1582625792181!5m2!1sru!2sru"></iframe>
+    <iframe class="map" id="map"></iframe>
 
   </main>
 
